# Gast

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  cmd_basic.go  cmd_config.go  cmd_file.go  cmd_grep.go  cmd_interactive.go  cmd_network.go  config.go  go.mod  main.go  utils.go
